fix the profile display issue on iPhone

--- a/angular/css/style.css
+++ b/angular/css/style.css
@@ -141,6 +141,9 @@ a {
 	align-items:center;
 	height: 130px;
 }
+.platform-cordova .profile {
+	height: 200px;
+}
 .profile__img {
 	width: 28vw;
 	height: 28vw;
